--- a/javaFat/build.gradle
+++ b/javaFat/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 test {
     systemProperties 'property': 'value'
     useJUnit {
-        includeCategories 'src/test/java.async'
+        includeCategories 'src/test/java/async'
     }
 }
 
